# imgine

./: .gitignore  CMakeLists.txt  ImgineConfig.h.in  README.md  img_core.cpp  img_core.hpp  img_core_algo.cpp  main.cpp  util_color.cpp  util_color.hpp  util_term.cpp  util_term.hpp
